Updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learnign software development</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Stockton, California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Snowboarding</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being the King of England</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Stockton</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to gain a unique skill set</p>
     </section>
 
     <footer id="footer">
