--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>About Me</title>
+    <title>A little bit about me</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am learnign software development</p>
+      <p>I am learning software development</p>
       <h1>Where I'm From</h1>
       <p>Stockton, California</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Snowboarding</p>
       <h1>What's your dream job?</h1>
-      <p>Being the King of England</p>
+      <p>King of England</p>
       <h1>Where do you live?</h1>
       <p>Stockton</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>I want to gain a unique skill set</p>
+      <p>I want to gain a new skill set</p>
     </section>
 
     <footer id="footer">
